test/expected/define_rgi.out
define SI as register int
             ^
14: error: "type register int" is illegal for built-in type
